@@ -5,6 +5,9 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+ - Fixed issue that caused tables to display a healthy status even though
+    their partitions were in critical state
+
  - Added fallback to unformatted results if no column types are returned.
 
  - Display notification warning only when a new CrateDB version is released.
